// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountWidget looks the right way 1`] = `
<div
  className="amount-component"
>
  <div
    className="form-group"
  >
    <input
      name="amount"
      type="hidden"
      value=""
    />
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      100
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      50
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      25
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      15
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      10
       €
    </button>
    <div
      className="input-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="autre montant"
        step={1}
        type="text"
        value=""
      />
      <div
        className="input-group-addon"
      >
        €
      </div>
    </div>
  </div>
  <p>
    <em>
      Si je paye des impôts, je profite d'une réduction d'impôt de 
      <strong>
        66 %
      </strong>
       de la somme donnée !
    </em>
  </p>
</div>
`;

exports[`AmountWidget looks the right way 2`] = `
<div
  className="amount-component"
>
  <div
    className="form-group"
  >
    <input
      name="amount"
      type="hidden"
      value={50}
    />
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      100
       €
    </button>
    <button
      className="btn btn-primary sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      50
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      25
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      15
       €
    </button>
    <button
      className="btn btn-default sc-bdVaJa hETZJq"
      onClick={[Function]}
      type="button"
    >
      10
       €
    </button>
    <div
      className="input-group"
    >
      <input
        className="form-control"
        onChange={[Function]}
        placeholder="autre montant"
        step={1}
        type="text"
        value=""
      />
      <div
        className="input-group-addon"
      >
        €
      </div>
    </div>
  </div>
  <p>
    <em>
      Si je paye des impôts, après réduction, ma contribution nette sera de seulement
       
      <strong
        className="text-danger"
      >
        17,00 €
      </strong>
       !
    </em>
  </p>
</div>
`;
